# LAB

./: Array_output.c  Array_output.h  CMakeLists.txt  Deleting_an_element.c  Deleting_an_element.h  Individual_task.c  Individual_task.h  Initializing_an_array.c  Initializing_an_array.h  Inserting_a_new_element.c  Inserting_a_new_element.h  RAB  main.c
