cmake_minimum_required(VERSION 3.26)
project(untitled C)

set(CMAKE_C_STANDARD 99)

add_executable(untitled main.c
        Initializing_an_array.c
        Initializing_an_array.h
        Inserting_a_new_element.c
        Inserting_a_new_element.h
        Deleting_an_element.c
        Deleting_an_element.h
        Individual_task.c
        Individual_task.h
        Array_output.c
        Array_output.h)
